...
            app:layout_constraintBottom_toBottomOf="@id/tvEmail"
            app:layout_constraintEnd_toEndOf="@+id/tvEmail"
            app:layout_constraintStart_toEndOf="@+id/logoEmail"
            app:layout_constraintTop_toTopOf="@+id/tvEmail">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/letEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Email" />

        </android.support.design.widget.TextInputLayout>
...
            app:layout_constraintStart_toEndOf="@id/logoPassword"
            app:layout_constraintTop_toTopOf="@id/tvPassword"
            app:passwordToggleDrawable="@drawable/ic_remove"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/letKataSandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Password"
                android:inputType="textPassword" />

...
